# slam-sensor-fusion

./: README.md
localization/: CMakeLists.txt  package.xml  setup.py
localization/config/: params.yaml
localization/include/localization/: brute_force_alignment.h  geo_lib.hpp  global_map_frames_manager.h  icp_point_to_point.h  localization_node.h  point_cloud_processing.hpp  stochastic_filter.h
localization/launch/: localization.launch  localization_launch.py  localization_launch.xml
localization/localization/: localization_node.py  optimize_global_map_pose.py
localization/resource/: visualizer.rviz
localization/src/: brute_force_alignment.cpp  global_map_frames_manager.cpp  icp_point_to_point.cpp  localization_node.cpp  localization_node_cpp.cpp  main.cpp  stochastic_filter.cpp
localization_python/: package.xml  setup.cfg  setup.py
localization_python/localization_python/: optimize_global_map_pose.py
mapping/: CMakeLists.txt  package.xml
mapping/config/: params.yaml
mapping/include/mapping/: file_manipulation.hpp  map_data_save_node.h
mapping/launch/: mapping.launch  mapping_launch.py  mapping_launch.xml
mapping/src/: main.cpp  map_data_save_node.cpp
