<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vini@todo.todo">vini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>

  <exec_depend>roslaunch</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <!-- <build_type>ament_python</build_type> -->
    <build_type>catkin</build_type>
  </export>
</package>
