<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vini@todo.todo">vini</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>

  <export>

  </export>
</package>